<resources>
    <string name="app_name">剁手买</string>
    <string name="action_settings">Settings</string>

    <string name="login_user">用户名</string>
    <string name="login_psw">密码</string>
    <string name="login_repsw">确认密码</string>
    <string name="login_btn">登录</string>
    <string name="login_register">注册</string>
    <string name="login_register_usr">新用户吗?</string>
    <string name="login_rem_usr">记住密码</string>

    <string name="one_price">￥ %1$s </string>
</resources>
